Entferne Dateien die nicht zum Feature gehören